--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,12 @@
 <app-navbar></app-navbar>
 
 <div class="container">
-  <app-playground></app-playground>
+  <app-playground>
+    <!-- This is content projection  -->
+    <h3>Projected Content Header</h3>
+    <p>We are projecting the content from AppComponent</p>
+    <div class="alert alert-primary" role="alert">
+      A simple primary alert—check it out!
+    </div>
+  </app-playground>
 </div>
