--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,7 @@
 
 <div class="container">
   <app-playground>
-    <!-- This is content projection  -->
-    <h3>Projected Content Header</h3>
-    <p>We are projecting the content from AppComponent</p>
-    <div class="alert alert-primary" role="alert">
-      A simple primary alert—check it out!
-    </div>
+    <app-person></app-person>
+    <h2>Content Projection Header</h2>
   </app-playground>
 </div>
