--- a/src/app/person/person.component.html
+++ b/src/app/person/person.component.html
@@ -1,1 +1,10 @@
-<p>person works!</p>
+<div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title">Vijay Kumar</h5>
+    <h6 class="card-subtitle mb-2 text-muted">Senior Developer</h6>
+    <p class="card-text">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua.
+    </p>
+  </div>
+</div>
