--- a/src/app/playground/playground.component.html
+++ b/src/app/playground/playground.component.html
@@ -1,16 +1,6 @@
 <h2>Learning Content Projection</h2>
 
 <hr />
-
-<!-- When select is used, order in the projected content doesn't matter -->
-<!-- By tag or selector -->
-<ng-content select="p"></ng-content>
-
+<ng-content select="h2"></ng-content>
 <hr />
-
-<ng-content select="h3"></ng-content>
-
-<hr />
-
-<!-- By css class -->
-<ng-content select=".alert"></ng-content>
+<ng-content select="app-person"></ng-content>
