--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,9 @@
 
 <div class="container">
   <app-playground>
-    <app-person></app-person>
+    <app-person [index]="1"></app-person>
+    <app-person [index]="2"></app-person>
+    <app-person [index]="3"></app-person>
     <h2>Content Projection Header</h2>
   </app-playground>
 </div>
