--- a/src/app/playground/playground.component.html
+++ b/src/app/playground/playground.component.html
@@ -1,6 +1,4 @@
 <h2>Learning Content Projection</h2>
 
 <hr />
-<ng-content select="h2"></ng-content>
-<hr />
-<ng-content select="app-person"></ng-content>
+<ng-content></ng-content>
