--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
 
 <div class="container">
   <app-playground>
-    <app-person></app-person>
+    <h2>Header from content projection</h2>
   </app-playground>
 </div>
